[package]
name = "mimic"
version = "0.1.0"
edition = "2021"
description = "Library to detect maliciously crafted files that exploit parsing vulnerabilities (DNG, etc.)"
license = "MIT"
repository = "https://github.com/ismyphonepwned/mimic"
keywords = ["security", "dng", "exploit", "detection", "parsing"]
categories = ["cryptography::cryptography", "development-tools"]

[lib]
name = "mimic"
path = "src/lib.rs"

[[bin]]
name = "mimic"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["serde"]
# Serialization for JSON/compact reports
serde = ["dep:serde"]
# Parallel batch analysis (rayon) for thousands of files/sec
parallel = ["dep:rayon"]
# Optional CLI binary (std, fs)
cli = ["dep:clap", "dep:walkdir", "dep:serde_json", "dep:sha2", "dep:indexmap"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
walkdir = { version = "2.4", optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
indexmap = { version = "2.0", features = ["serde"], optional = true }

[dev-dependencies]
# For tests with sample buffers
bytemuck = "1.14"
